<resources>
    <string name="accounts">Accounts</string>
    <string name="account_cleared">Account cleared</string>
    <string name="account_created">Account created as</string>
    <string name="account_details">Account Details</string>
    <string name="account_nonexistent">Account does not exist</string>
    <string name="active">active</string>
    <string name="address">Address:</string>
    <string name="app_name">First network app</string>
    <string name="avatar">avatar</string>
    <string name="black_line">black_line</string>
    <string name="blank" />
    <string name="button">Button</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all_records">Clear this account</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_colon">Email :</string>
    <string name="email_invalid">Email invalid</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="female">Female</string>
    <string name="first_name">First name:</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="full_details">Full Details</string>
    <string name="gender">Gender:</string>
    <string name="greeting">Hi,</string>
    <string name="id">ID</string>
    <string name="id_colon">ID:</string>
    <string name="inactive">inactive</string>
    <string name="information_updated">Information updated</string>
    <string name="last_name">Last name:</string>
    <string name="logout">Logout</string>
    <string name="male">Male</string>
    <string name="minimum_password">Minimum 8 characters including lowercase, uppercase and numeric</string>
    <string name="name">Name</string>
    <string name="network_error">Network Error</string>
    <string name="new_signup_here">New ? Sign up here:</string>
    <string name="disconnected">Not connected to network</string>
    <string name="padding">padding</string>
    <string name="password">Password</string>
    <string name="password_colon">Password:</string>
    <string name="password_requirements">Password should have 8 characters including a lowercase letter, an uppercase
        letter and a number</string>
    <string name="phone">Phone:</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="save">Save</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign In</string>
    <string name="status">Status:</string>
    <string name="website">Website:</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="filler">filler</string>
    <string name="dialer">dialer</string>
    <string name="call">Call</string>
    <string name="no_dialer_app_found">No dialer app found</string>
</resources>