<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="account"
            type="com.example.mvvm.viewModel.AccountViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@+id/progressSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <ProgressBar
                android:id="@+id/progressSpinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="@{account.paginationProgressSpinnerVisibility? android.view.View.VISIBLE : android.view.View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/big_rounded_edges"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressSpinner2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="@{account.putRequestProgressSpinnerVisibility? android.view.View.VISIBLE : android.view.View.GONE}" />

            <LinearLayout
                android:id="@+id/full_details_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@android:string/cancel"
                        android:visibility="@{account.enableAccountDetailEdit? android.view.View.VISIBLE : android.view.View.INVISIBLE}" />

                    <TextView
                        android:id="@+id/id_display"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{&quot;ID: &quot;+account.accountCurrentDetails.id}" />

                    <ToggleButton
                        android:id="@+id/edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={account.enableAccountDetailEdit}"
                        android:textOff="@string/edit"
                        android:textOn="@string/save" />
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="30dp">

                    <LinearLayout
                        android:id="@+id/full_details_edit_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp">

                        <LinearLayout
                            android:id="@+id/labels"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/first_name_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/first_name" />

                            <TextView
                                android:id="@+id/last_name_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/last_name" />

                            <TextView
                                android:id="@+id/gender_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/gender" />

                            <TextView
                                android:id="@+id/dob_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/date_of_birth" />

                            <TextView
                                android:id="@+id/email_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/email_colon" />

                            <TextView
                                android:id="@+id/phone_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/phone" />

                            <TextView
                                android:id="@+id/website_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/website" />

                            <TextView
                                android:id="@+id/address_label"
                                android:layout_width="match_parent"
                                android:layout_height="92dp"
                                android:gravity="center_vertical"
                                android:text="@string/address" />

                            <TextView
                                android:id="@+id/status_label"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:gravity="center_vertical"
                                android:text="@string/status" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/editable"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.75"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/first_name_edit"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:ems="10"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:hint="@string/blank"
                                android:importantForAutofill="no"
                                android:inputType="textPersonName"
                                android:text="@={account.accountCurrentDetails.firstName}" />

                            <EditText
                                android:id="@+id/last_name_edit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:hint="@string/blank"
                                android:importantForAutofill="no"
                                android:inputType="textPersonName"
                                android:text="@={account.accountCurrentDetails.lastName}" />

                            <RadioGroup
                                android:id="@+id/gender_edit"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp">

                                <RadioButton
                                    android:id="@+id/female_option"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked="@={account.femaleRadioButtonValue}"
                                    android:enabled="@{account.enableAccountDetailEdit}"
                                    android:text="@string/female" />

                                <RadioButton
                                    android:id="@+id/male_option"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked="@={account.maleRadioButtonValue}"
                                    android:enabled="@{account.enableAccountDetailEdit}"
                                    android:text="@string/male" />
                            </RadioGroup>

                            <EditText
                                android:id="@+id/dob_edit"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:ems="10"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:hint="@string/blank"
                                android:importantForAutofill="no"
                                android:inputType="phone"
                                android:text="@={account.accountCurrentDetails.dob}" />

                            <EditText
                                android:id="@+id/email_edit"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:ems="10"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:hint="@string/blank"
                                android:importantForAutofill="no"
                                android:inputType="textEmailAddress"
                                android:text="@={account.accountCurrentDetails.email}" />

                            <EditText
                                android:id="@+id/phone_edit"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:background="@drawable/text_box"
                                android:ems="10"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:hint="@string/blank"
                                android:importantForAutofill="no"
                                android:inputType="phone"
                                android:text="@={account.accountCurrentDetails.phone}" />

                            <EditText
                                android:id="@+id/website_edit"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:ems="10"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:hint="@string/blank"
                                android:importantForAutofill="no"
                                android:inputType="textPersonName"
                                android:text="@={account.accountCurrentDetails.website}" />

                            <EditText
                                android:id="@+id/address_edit"
                                android:layout_width="match_parent"
                                android:layout_height="92dp"
                                android:ems="10"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:gravity="start|top"
                                android:hint="@string/blank"
                                android:importantForAutofill="no"
                                android:inputType="textMultiLine"
                                android:text="@={account.accountCurrentDetails.address}" />

                            <Switch
                                android:id="@+id/status_edit"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:checked="@={account.statusSwitchValue}"
                                android:enabled="@{account.enableAccountDetailEdit}"
                                android:gravity="center_vertical"
                                android:text="@{account.statusSwitchValue?account.activeValue:account.inactiveValue}"
                                android:textSize="24sp" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>